# dlt-dbt-databricks

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  databricks.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  example_request.yml  update_radar.yml
.github/workflows/: ci.yml
docs/: agentic-quality-gate.md  architecture.md  deploy-databricks-bundle.md  glossary.md  setup-databricks.md
ingestion/: README.md  _common.py
ingestion/.dlt/: config.toml  secrets.toml.example
ingestion/advanced/: data_contracts.py  iceberg_table_format.py  merge_incremental.py
ingestion/pipelines/: rest_api_to_databricks.py  sql_database_to_databricks.py
notebooks/: 01_dlt_zero_config_and_claims_explore.py  README.md
orchestration/: README.md  agentic_quality_gate.py  collect_gate_metrics.py  doctor.py  gate_on_databricks.py  run_e2e.py
tests/: test_agentic_quality_gate.py  test_collect_gate_metrics.py  test_doctor.py  test_rest_api_shaping.py
transformation/dbt_databricks/: README.md  dbt_project.yml  profiles.yml.example
transformation/dbt_databricks/local_data/: claims_sample_synthetic.csv  generate_claims_sample.py
transformation/dbt_databricks/macros/: cents_to_dollars.sql
transformation/dbt_databricks/models/: exposures.yml  sources.yml
transformation/dbt_databricks/models/marts/: _claims_marts.yml  _marts.yml  mart_claims_by_payer.sql  (+2 more)
transformation/dbt_databricks/snapshots/: snap_customers.sql
updates/: README.md  databricks.md  dbt.md  dlt.md  radar.md  sources.md
(+5 files in other folders)
